feat: melhoria path swagger
